第二次提交

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             {{msg}}
         </h3>
         <div v-text='msg'></div>
+        <div v-text='person.fav'></div>
         <div v-html='htmlStr'></div>
         <div v-html='htmlStr'></div>
         <input type="text" v-model='msg'>
